# birdhouse

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  RELEASES.md  build.rs
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  code_quality.md  documentation.md  feature_request.md  performance.md
.github/workflows/: ci.yml
components/: Cargo.toml
core-plugins/data/: Cargo.toml
core-plugins/input/: Cargo.toml
core-plugins/input/src/: bindings.rs  lib.rs  plugin.rs  prelude.rs
docs/: README.md
docs/rfc/: example.md
mechanics/: Cargo.toml
shared/: Cargo.toml
src/: main.rs
tools/lint/: Cargo.toml
tools/lint/src/: main.rs
